2002-05-19  Per Bothner  <per@bothner.com>

	* CodeAttr.java (doPendingFinalizers):  New public method.
	(emitReturn):  Call doPendingFinalizers.
	(getCurrentTry):  New method.

2002-05-06  Per Bothner  <per@bothner.com>

	* Method.java (toString):  Use '.' before method name.

2002-04-19  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* ClassType.java (addMethods): Prevents addMethods to incorrectly list
	twice the methods of the class.

2002-04-18  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java:  New default constructor.
	(addClass(Class), addClass(ClassType)):  New overloaded methods.

	* ClassType.java (writeToArray):  Handle IOException.

	* CodeAttr.java (emitInvoke):  If method name is "<init>",
	do invokeSpecial.

	* CodeAttr.java (emitGotoIfCompare2):  Support object eq/ne compares.
	(emitGotoIfEq,  emitGotoIfNE):  Re-implement using emitGotoIfCompare2.

	* Method.java (startCode):  New convenience method.

2002-04-16  Phil Walker  <phil_walker@hp.com>

	* InnerClassesAttr.java (write):  Multiple index by 4.

2002-04-02  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* CodeAttr.java (emitShift): New method.
	(emitShl, emitShr, emitUshr): Handle a long first argument.

2002-03-07  Per Bothner  <per@bothner.com>

	* Scope.java (preserved):  New flag.
	(freeLocals)  New method.
	* CodeAttr.java (popScpe):  Use new freeLocals method.
	* LocalVarsAttr.java (preserveVariablesUpto):  New method.

	* Scope.java (lookup):  Make public.

2002-03-02  Per Bothner  <per@bothner.com>

	* Makefile.am (dump):  Remove rule for making executable.

	* README:  Remove obsolete file.

	* CodeAttr.java (emitGotoIfCompare2):  ALso allow ifeq and ifne.

2002-02-01  Per Bothner  <per@bothner.com>

	* ClassType.java (sourcefile):  Remove unused field.
	Reported by Daniel Bonniot  <bonniot@users.sourceforge.net>.

2002-01-31  Per Bothner  <per@bothner.com>

	* ClassType.java:  Implement Externalizable.
	(writeExternal, readExternal, readResolve):  New methods.
